fix: fix text spill out in long blog post

--- a/src/assets/scss/components/hero.scss
+++ b/src/assets/scss/components/hero.scss
@@ -60,3 +60,9 @@
         margin-block-start: 3rem;
     }
 }
+
+.content-container {
+    .span-5-12 {
+        min-width: 0;
+    }
+}
